// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`api/3.x/annotation-page/technical AnnotationPage: Complete Annotation Page getLabel: getLabel Complete Annotation Page 1`] = `
Object {
  "en": Array [
    "Annotation 1",
  ],
}
`;

exports[`api/3.x/annotation-page/technical AnnotationPage: Complete Annotation Page getMetadata: getMetadata Complete Annotation Page 1`] = `
Array [
  Object {
    "label": Object {
      "en": Array [
        "Author",
      ],
    },
    "value": Object {
      "@none": Array [
        "Anne Author",
      ],
    },
  },
  Object {
    "label": Object {
      "en": Array [
        "Published",
      ],
    },
    "value": Object {
      "en": Array [
        "Paris, circa 1400",
      ],
      "fr": Array [
        "Paris, environ 1400",
      ],
    },
  },
  Object {
    "label": Object {
      "en": Array [
        "Notes",
      ],
    },
    "value": Object {
      "en": Array [
        "Text of note 1",
        "Text of note 2",
      ],
    },
  },
  Object {
    "label": Object {
      "en": Array [
        "Source",
      ],
    },
    "value": Object {
      "@none": Array [
        "<span>From: <a href=\\"https://example.org/db/1.html\\">Some Collection</a></span>",
      ],
    },
  },
]
`;

exports[`api/3.x/annotation-page/technical AnnotationPage: Complete Annotation Page getRequiredStatement: getRequiredStatement Complete Annotation Page 1`] = `
Object {
  "label": Object {
    "en": Array [
      "Attribution",
    ],
  },
  "value": Object {
    "en": Array [
      "Provided by Example Organization",
    ],
  },
}
`;

exports[`api/3.x/annotation-page/technical AnnotationPage: Complete Annotation Page getRights: getRights Complete Annotation Page 1`] = `"https://creativecommons.org/licenses/by/4.0/"`;

exports[`api/3.x/annotation-page/technical AnnotationPage: Complete Annotation Page getSummary: getSummary Complete Annotation Page 1`] = `
Object {
  "en": Array [
    "Book 1, written be Anne Author, published in Paris around 1400.",
  ],
}
`;

exports[`api/3.x/annotation-page/technical AnnotationPage: Complete Annotation Page getThumbnail: getThumbnail Complete Annotation Page 1`] = `
Object {
  "id": "https://example.org/images/book1-page1/full/80,100/0/default.jpg",
  "service": Array [
    "https://example.org/images/book1-page1",
  ],
  "type": "Image",
}
`;

exports[`api/3.x/annotation-page/technical AnnotationPage: Complete Annotation Page getThumbnailId: getThumbnailId Complete Annotation Page 1`] = `"https://example.org/images/book1-page1/full/80,100/0/default.jpg"`;

exports[`api/3.x/annotation-page/technical AnnotationPage: Minimal Annotation Page getLabel: getLabel Minimal Annotation Page 1`] = `null`;

exports[`api/3.x/annotation-page/technical AnnotationPage: Minimal Annotation Page getMetadata: getMetadata Minimal Annotation Page 1`] = `Array []`;

exports[`api/3.x/annotation-page/technical AnnotationPage: Minimal Annotation Page getRequiredStatement: getRequiredStatement Minimal Annotation Page 1`] = `null`;

exports[`api/3.x/annotation-page/technical AnnotationPage: Minimal Annotation Page getRights: getRights Minimal Annotation Page 1`] = `null`;

exports[`api/3.x/annotation-page/technical AnnotationPage: Minimal Annotation Page getSummary: getSummary Minimal Annotation Page 1`] = `null`;

exports[`api/3.x/annotation-page/technical AnnotationPage: Minimal Annotation Page getThumbnail: getThumbnail Minimal Annotation Page 1`] = `null`;

exports[`api/3.x/annotation-page/technical AnnotationPage: Minimal Annotation Page getThumbnailId: getThumbnailId Minimal Annotation Page 1`] = `null`;
